//// Docs: https://dbml.dbdiagram.io/docs
//// -- LEVEL 1
//// -- Schemas, Tables and References

// Creating tables
// You can define the tables with full schema names
Table ecommerce.merchants [note: "merchants table "] {
  id int [not null, pk, note: 'name chosen by configuration'] 
  country_code int 
  merchant_name varchar(255)
  
  created_at varchar
  admin_id int [ref: > U.id]
  Indexes {
    (id, country_code) // [pk] TODO: unsupported
  }
}

// If schema name is omitted, it will default to "public" schema.
Table users as U {
  id int [pk, increment] // auto-increment
  full_name varchar
  created_at timestamp
  country_code int
}

Table countries {
  code int [pk]
  name varchar
  continent_name varchar
 }

// Creating references
// You can also define relaionship separately
// > many-to-one; < one-to-many; - one-to-one; <> many-to-many
Ref: U.country_code > countries.code  
Ref: ecommerce.merchants.country_code > countries.code

//----------------------------------------------//

//// -- LEVEL 2
//// -- Adding column settings

Table ecommerce.order_items {
  order_id int [ref: > ecommerce.orders.id] // inline relationship (many-to-one)
  product_id int
  quantity int [default: 1] // default value
}

Ref: ecommerce.order_items.product_id > ecommerce.products.id

Table ecommerce.orders {
  id int [pk] // primary key
  user_id int [ref: > U.id, not null, unique]
  status varchar
  created_at varchar [note: 'When order created'] // add column note
}

//----------------------------------------------//

//// -- Level 3 
//// -- Enum, Indexes

// Enum for 'products' table below
Enum ecommerce.products_status {
  out_of_stock
  in_stock
  running_low [note: 'less than 20'] // add column note
}

// Indexes: You can define a single or multi-column index 
Table ecommerce.products {
  id int [pk]
  name varchar(255) // Specify lenght of field, or else gorm will set it as a longtext
  merchant_id int [not null]
  price decimal(5, 2)
  status int
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  Indexes {
    (merchant_id, status) [name: 'product_status']
    id [unique]
  }
}

Table ecommerce.product_tags {
  id int [pk]
  name varchar
}

Table ecommerce.merchant_periods {
  id int [pk]
  merchant_id int
  country_code int
  start_date datetime
  end_date datetime
}

Ref: ecommerce.products.merchant_id > ecommerce.merchants.id [update: cascade] // many-to-one
Ref: ecommerce.product_tags.id <> ecommerce.products.id [delete: cascade] // many-to-many
//composite foreign key
Ref: ecommerce.merchant_periods.merchant_id > ecommerce.merchants.id
